<resources>
    <string name="app_name">readytal</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="btn_upgate_to_pro">Upgrade to Pro</string>
    <string name="btn_privacy">Privacy</string>
    <string name="btn_purchase_history">Purchase History</string>
    <string name="btn_help">Help and Support</string>
    <string name="btn_setting">Settings</string>
    <string name="btn_invite_friend">Invite a Friend</string>
    <string name="btn_logout">Logout</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>